# morloc

./: .dockerignore  .gitignore  .travis.yml  CLAUDE.md  CONFIG  ChangeLog.md  LICENSE  Main.hs  Makefile  README.md  TODO  USAGE  VERSION  debug.sh  fourmolu.yaml  hie.yaml  morloc.cabal  package.yaml  rat.sh  stack.yaml  test.loc
.github/workflows/: .test.yml  release.yml  test.yml
backend/: Main.hs  Makefile
backend/core/: README.md  atomic.loc  control.loc  datcache.loc  io.loc  memcache.loc  table.loc  type.loc
backend/sample-common/: string.json  table-String-Int-Int.json
backend/src/: README.md  setup.py
backends/: Makefile  bashloc.sh  build-nexus.awk  build.py  build.sh  exe-bash.sh  grammar.m4  parse-grammar.awk  parse.awk  test.loc
backends/R/: Makefile  R.l  R.y
backends/etc/: bash-grammar.m4  grammar.m4  nexus.m4  nexus.sh  r-grammar.m4
backends/lib/: bash-base.loc
backends/lib-bash/: base.loc  manifold.sh
backends/notes/: R-manifold.R  R-manifolds.R  bash-manifold.sh  bash-principles.md  py-manifold.py
bench/: Bench.hs
bench/test-data/: complex-types.loc  interop.loc  (+1 more)
claude-memory/: ARCHITECTURE.md  BUILD-REFACTOR-PLAN.md  BUILD-SYSTEM.md  BUILD-TODO.md  CODEGEN.md  COMPILER-INVOCATION.md  DATA-STRUCTURES.md  DEBUGGING.md  ETA-PLAN.md  FIXITY-BUGS.md  FRONTEND.md  IMPLEMENTATION-POLYMORPHISM.md  INFIX-OPERATORS.md  INSTALLATION-ANALYSIS.md  MANIFEST-SCHEMA.md  MODULES.md  MORLOC_SYNTAX.md  PARSING-ALGORITHMS.md  QC-TOOLS.md  QC.md  RECORDS.md  RUNTIME.md  SYSGEN.md  TESTS.md  TODO.md  TRANSLATOR-IR.md  TREES-THAT-GROW.md  TYPECHECKING-IMPLEMENTATION.md  TYPECHECKING-THEORY.md  TYPECHECKING.md  TYPECLASSES.md
container/: Dockerfile  Makefile
data/: binary.json  char.json  interop.R  interop.cpp  interop.py  main.R  main.cpp  main.py  morloc.h  nexus.c  nexus.py  nexus_main.py  nexus_utility.py  preamble.R  preamble.cpp  preamble.py  serialization.R  serialization.cpp  serialization.py  socket.c  tree-int-int.json  utility.py
data/rust/: Cargo.toml
data/rust/morloc-manager/: Cargo.toml
data/rust/morloc-manager/src/: bridge.rs  config.rs  container.rs  doctor.rs  environment.rs  error.rs  freeze.rs  main.rs  selinux.rs  serve.rs  types.rs  version.rs
data/rust/morloc-manifest/: Cargo.toml
data/rust/morloc-manifest/src/: lib.rs
data/rust/morloc-nexus/: Cargo.toml  build.rs
data/rust/morloc-nexus/src/: cli.rs  convert.rs  dispatch.rs  file.rs  help.rs  loader.rs  main.rs  manifest.rs  phase2.rs  process.rs  runlog.rs  schemas.rs  stdio_bridge.rs  stdio_server.rs  view.rs
data/rust/morloc-nexus/src/file/: tests.rs
data/rust/morloc-runtime/: Cargo.toml  build.rs  cbindgen.toml
data/rust/morloc-runtime-types/: Cargo.toml
data/rust/morloc-runtime-types/src/: compression.rs  cschema.rs  daemon_socket.rs  error.rs  lib.rs  null_check.rs  packet.rs  pattern.rs  schema.rs  shm_types.rs  stdio_proto.rs  stream_handle.rs
data/rust/morloc-runtime/src/: arrow_ffi.rs  arrow_ipc_reader.rs  cache.rs  cli.rs  config_ffi.rs  cschema.rs  daemon_ffi.rs  debug.rs  error.rs  eval_arena.rs  eval_ffi.rs  ffi.rs  handle_scan.rs  hash.rs  http_ffi.rs  intrinsics.rs  ipc.rs  ipc_ffi.rs  json.rs  json_ffi.rs  lib.rs  log.rs  manifest_ffi.rs  mpack.rs  null_check.rs  packet.rs  packet_ffi.rs  pool_ffi.rs  recur.rs  router_ffi.rs  run.rs  schema.rs  shm.rs  shm_companion.rs  slurm_bridge.rs  slurm_ffi.rs  stream.rs  utility.rs  voidstar.rs
demo/: README.md  demo.R  taxize.loc
dev/: Generate.hs  README.md
doc/: terminology.md
docs/: Makefile  asRDF.md  effects.md  forms.md  grammar.md  grammars.md  grim.md  language-interoperability.md  loc.tex  manifolds.md  notes.md  packaging.md  paradigms.md  parameters.md  pieces.md  related-work.bib  terminology.md  types.md
examples/: .gitignore  0-nexus.perl  0-pool.R  10_data.tar  10_wc.loc  11.txt  11_filter.loc  12_cluster.loc  13_blast.loc  13_read_gff.loc  1_hello_world.loc  2_composition.loc  3_hooks.loc  3_modifiers.loc  4_hooks.loc  5_types.loc  6_filesize.loc  7_times.loc  8_glue.loc  9_better_r.loc  Makefile  al.gff  arithmetic-c.loc  arithmetic.loc  data.loc  deep.loc  foo.R  mathy-math.loc  mdata.loc  nexus.pl  pool.R  pybase.loc  pybase.py  q.loc  r-base.R  r-base.loc  rbase.R  rbase.loc  realization.loc  rmsWithTypes.loc  (+13 more)
executable/: CppPrinter.hs  CppTranslator.hs  Data.hs  Main.hs  Subcommands.hs  UI.hs
flex/: Makefile  rats.l
frontend/: Makefile  README.md  bufstack.c  bufstack.h  build.c  build.h  build_grp.c  build_grp.h  build_io.c  build_io.h  build_mod.c  build_mod.h  build_path.c  build_path.h  composition.c  composition.h  couplet.c  couplet.h  effect.c  effect.h  entry.c  entry.h  hof.c  hof.h  id.c  id.h  label.c  label.h  lhs.c  lhs.h  lil.c  lil.h  list.c  list.h  loc.l  loc.output  loc.y  manifold.c  manifold.h  morloc  (+46 more)
gdb-scripts/: debug.gdb  print.gdb
logic/: fuseki-config.ttl  law.pie  law.rules  play.rq  rule-generator.rq  rules.ttl
metrics/: README.md
morloc-manager/: README.md  morloc-manager.cabal  package.yaml
ontology/: R-types.R  R-types.loc  types.loc
pools/: pool.cpp
samples/: 1_basic.rats  1a_basic.rats  1b_basic.rat  2_multiple-inputs.rats  3_conditional.rats  3_loops.rats  4_conditionals.rat  foo-lib.rat  foo.rat  full.rat  import-test-lib.loc  import-test-lib.rat  import-test.loc  import-test.rat  test.loc
scripts/: build-rust.sh  bump-version.sh
spec/: SPEC.md
src/: EvalError.hs  Generate.hs  Graph.hs  Interpreter.hs  Lexer.hs  Main.hs  Makefile  Morloc.hs  NodeAttribute.hs  Parser.hs  Syntax.hs
test-suite/: .gitignore  EffectBoundaryTests.hs  GoldenMakefileTests.hs  GoldenManifoldTests.hs  HLint.hs  IrrefutablePatternLexerTests.hs  Main.hs  MorlocDepsTests.hs  ParserTests.hs  PatternChainTests.hs  PropertyTests.hs  PropertyTypeTests.hs  RefutablePatternTests.hs  SchemaHintTests.hs  SizeParseTests.hs  Spec.hs  UnitManifoldTests.hs  UnitTests.hs  UnitTypeTests.hs  WalkerTests.hs  test.sh
tests/: Makefile  Spec.hs  composed-effects.loc  runtests.sh  simple-r.loc  simple.loc  t1.loc
vim-syntax/: loc.vim  rat.vim  rats.vim
(+3553 files in other folders)
