name:     morloc
version:  0.0.0
homepage: https://github.com/arendsee/morloc
synopsis: A multi-lingual, typed, workflow language
description:

    Morloc is a generative, metaprogamming language that composes functions
    from other languages (e.g. Bash, R, Python) into multi-lingual workflows.
    The central goal of Morloc eliminate the boundaries between the many
    languages used for data analysis, unifying all through a common type
    system. Each node in the workflow wraps an explicitly typed function (the
    type system  is a subset of the Haskell's).  Based on these types, the
    compiler generates linking code, wraps the functions in executable scripts,
    and checks the high-level correctness of the program.  The Morloc
    programmer tells the Morloc compiler the function signature and specifies
    the funtion gaph, and the compiler does the rest.

category:           Compiler
license:            GGPL-3
license-file:       LICENSE
author:             Zebulun Arendsee 
maintainer:         arendsee@iastate.edu
extra-source-files: README.md TODO CONFIG
                    data/*.json
                    tests-suite/*.hs
cabal-version:      >= 1.24
bug-reports:        https://github.com/arendsee/morloc/issues
build-type:         Simple

library
    default-language: Haskell2010
    hs-source-dirs: library
    exposed-modules:  Morloc
                      Morloc.EvalError
                      Morloc.Graph
                      Morloc.Interpreter
                      Morloc.Lexer
                      Morloc.NodeAttribute
                      Morloc.Parser
                      Morloc.Syntax

    build-depends: base,
                   parsec,
                   mtl

    ghc-options: -Wall

executable morloc
    default-language: Haskell2010
    main-is: Main.hs
    hs-source-dirs: executable
    build-depends: base,
                   haskeline,
                   mtl,
                   parsec,
                   morloc

    ghc-options: -Wall


test-suite hspec
    build-depends:    base, morloc, hspec == 2.4.*, QuickCheck
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0


test-suite hlint
    build-depends:    base, hlint == 2.0.*
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          HLint.hs
    type:             exitcode-stdio-1.0
