name:     morloc
version:  0.12.0
homepage: https://github.com/arendsee/morloc
synopsis: A multi-lingual, typed, workflow language
description:

    Morloc is a generative, metaprogamming language that composes functions
    from other languages (e.g. Bash, R, Python) into multi-lingual workflows.
    The central goal of Morloc eliminate the boundaries between languages,
    unifying all through a common type system. Each node in the workflow wraps
    an explicitly typed function (the type system is a subset of the
    Haskell's). Based on these types, the compiler generates linking code,
    wraps the functions in executable scripts, and checks the high-level
    correctness of the program. The Morloc programmer tells the Morloc compiler
    the function signature and specifies the funtion gaph, and the compiler
    does the rest.

category:           Compiler
license:            GPL-3
license-file:       LICENSE
author:             Zebulun Arendsee 
maintainer:         arendsee@iastate.edu
extra-source-files: README.md
                    data/common/*.json
cabal-version:      >= 1.10
bug-reports:        https://github.com/arendsee/morloc/issues
build-type:         Simple

flag documentation
    default: False

library
    default-language: Haskell2010
    hs-source-dirs: library
    exposed-modules:  Morloc
                      Morloc.Error
                      Morloc.State
                      Morloc.Lexer
                      Morloc.Parser
                      Morloc.Triple
                      Morloc.Tree
                      Morloc.Data

    build-depends: base,
                   safe,
                   parsec,
                   text,
                   mtl

    ghc-options: -Wall

    if flag(documentation)
        build-depends: hscolour

executable morloc
    main-is: Main.hs
    hs-source-dirs: executable
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5
      , morloc 
    default-language: Haskell2010
 
test-suite morloc-test-suite
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_morloc
  hs-source-dirs:
      test-suite
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base
    , tasty
    , tasty-hspec
    , morloc
  default-language: Haskell2010
