[workspace]
members = ["morloc-manifest", "morloc-runtime", "morloc-nexus", "morloc-manager"]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
indexmap = { version = "2", features = ["serde"] }
rmp-serde = "1"
twox-hash = "2"
nix = { version = "0.29", features = ["signal", "socket", "mman", "process", "fs"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[profile.release]
opt-level = 2
lto = "thin"
