[workspace]
members = ["morloc-manifest", "morloc-runtime", "morloc-nexus", "morloc-manager"]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
indexmap = { version = "2", features = ["serde"] }
rmp-serde = "1"
twox-hash = "2"
nix = { version = "0.29", features = ["signal", "socket", "mman", "process", "fs"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[profile.release]
opt-level = 2
lto = "thin"
# Required: the per-eval SHM arena (eval_arena.rs) relies on Drop running
# during stack unwind to release tracked SHM blocks on panic. Switching to
# `panic = "abort"` would leak every block held by the active arena when a
# worker thread panics. If a future release wants smaller binaries via abort,
# also rework the arena to install a panic handler or use atexit-style cleanup.
panic = "unwind"

[profile.dev]
panic = "unwind"
