[workspace]
members = ["morloc-manifest", "morloc-runtime-types", "morloc-runtime", "morloc-nexus", "morloc-manager"]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
indexmap = { version = "2", features = ["serde"] }
# `xxhash64` is the only algorithm we use, always with an explicit seed,
# so the `random` default feature (which pulls rand + getrandom) is
# disabled. Keep `std` for the std::hash::Hasher impl.
twox-hash = { version = "2", default-features = false, features = ["xxhash64", "std"] }
nix = { version = "0.29", features = ["signal", "socket", "mman", "process", "fs", "user"] }
clap = { version = "4", features = ["derive", "wrap_help"] }
thiserror = "2"

[profile.release]
opt-level = 2
lto = "thin"
# Required: the per-eval SHM arena (eval_arena.rs) relies on Drop running
# during stack unwind to release tracked SHM blocks on panic. Switching to
# `panic = "abort"` would leak every block held by the active arena when a
# worker thread panics. If a future release wants smaller binaries via abort,
# also rework the arena to install a panic handler or use atexit-style cleanup.
panic = "unwind"

[profile.dev]
panic = "unwind"
