[package]
name = "morloc-manager"
version = "0.18.0"
edition = "2021"
description = "Container lifecycle manager for Morloc"

[[bin]]
name = "morloc-manager"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
nix = { version = "0.29", features = ["signal", "socket", "mman", "process", "fs", "user"] }
clap = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
