[package]
name = "morloc-manager"
version = "0.25.0"
edition = "2021"
description = "Container lifecycle manager for Morloc"

[[bin]]
name = "morloc-manager"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
nix = { workspace = true }
clap = { workspace = true }
anstream = "1"
thiserror = { workspace = true }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
