[package]
name = "morloc-nexus"
version = "0.88.0"
edition = "2021"
description = "Morloc nexus: CLI dispatcher for multi-language pool orchestration"
# Version is intentionally synchronized with the morloc compiler version
# (see ../../../package.yaml). Manifests record the morloc_version that
# built them; the nexus rejects manifests whose version differs from its
# own CARGO_PKG_VERSION at parse time. Bumping the morloc compiler
# version requires bumping this version in lockstep.

[[bin]]
name = "morloc-nexus"
path = "src/main.rs"

[dependencies]
morloc-manifest = { path = "../morloc-manifest" }
# Only the stateless types crate -- not morloc-runtime. State-touching
# functions (shm, eval_arena, daemon recovery, packet config) reach
# libmorloc.so at load time via DT_NEEDED (configured in build.rs) so
# there is a single per-process copy of every static.
morloc-runtime-types = { path = "../morloc-runtime-types" }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
chrono = "0.4"
