[package]
name = "morloc-runtime"
version = "0.80.0"
edition = "2021"
description = "Morloc runtime library: shared memory, serialization, IPC, packet protocol"
# Version is intentionally synchronized with the morloc compiler version
# (see ../../../package.yaml). The C-FFI manifest reader rejects
# manifests whose recorded morloc_version differs from this crate's
# CARGO_PKG_VERSION at parse time. Bumping the morloc compiler version
# requires bumping this version in lockstep.

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
morloc-manifest = { path = "../morloc-manifest" }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp = "0.8"
rmp-serde = { workspace = true }
twox-hash = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
cbindgen = "0.28"
# cc crate no longer needed -- all C files ported to Rust
