[package]
name = "morloc-runtime"
version = "0.82.0"
edition = "2021"
description = "Morloc runtime library: shared memory, serialization, IPC, packet protocol"
# Version is intentionally synchronized with the morloc compiler version
# (see ../../../package.yaml). The C-FFI manifest reader rejects
# manifests whose recorded morloc_version differs from this crate's
# CARGO_PKG_VERSION at parse time. Bumping the morloc compiler version
# requires bumping this version in lockstep.

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
morloc-manifest = { path = "../morloc-manifest" }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp = "0.8"
rmp-serde = { workspace = true }
twox-hash = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
arrow-array = "58"
arrow-buffer = "58"
arrow-data = "58"
arrow-schema = "58"
arrow-ipc = "58"
arrow-select = "58"
parquet = { version = "58", default-features = false, features = ["arrow"] }
arrow-csv = "58"
bytes = "1"

[build-dependencies]
cbindgen = "0.28"
# cc crate no longer needed -- all C files ported to Rust
