[package]
name = "morloc-runtime"
version = "0.92.0"
edition = "2021"
description = "Morloc runtime library: shared memory, serialization, IPC, packet protocol"
# Version is intentionally synchronized with the morloc compiler version
# (see ../../../package.yaml). The C-FFI manifest reader rejects
# manifests whose recorded morloc_version differs from this crate's
# CARGO_PKG_VERSION at parse time. Bumping the morloc compiler version
# requires bumping this version in lockstep.

[lib]
# Intentionally no "rlib" -- removing it forces every Rust caller in
# the workspace (notably morloc-nexus) to go through libmorloc.so via
# the C ABI (DT_NEEDED dynamic link) for any state-touching call. The
# rlib path used to be the cause of a state-divergence bug: nexus
# statically linked the rlib AND dlopen'd the cdylib, ending up with
# two disjoint copies of every static (VOLUMES, COMMON_BASENAME,
# RECOVERY_IN_PROGRESS, ARENA, etc.). Stateless types and pure
# functions live in the separate `morloc-runtime-types` rlib so they
# can still be shared without duplicating state.
crate-type = ["cdylib", "staticlib"]

[dependencies]
morloc-manifest = { path = "../morloc-manifest" }
morloc-runtime-types = { path = "../morloc-runtime-types" }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
rmp = "0.8"
twox-hash = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
arrow-array = "58"
arrow-buffer = "58"
arrow-data = "58"
arrow-schema = "58"
arrow-ipc = "58"
arrow-select = "58"
parquet = { version = "58", default-features = false, features = ["arrow"] }
arrow-csv = "58"
arrow-cast = "58"
bytes = "1"
chrono = "0.4"
anstream = "1"

[build-dependencies]
cbindgen = "0.28"
# cc crate no longer needed -- all C files ported to Rust
